RESOLVED FIXED167585
[JSC] Do not reject WebAssembly.compile() with Exception
https://bugs.webkit.org/show_bug.cgi?id=167585
Summary [JSC] Do not reject WebAssembly.compile() with Exception
Yusuke Suzuki
Reported 2017-01-30 07:01:42 PST
[JSC] Make Exception JSCell and do not reject WebAssembly.compile() with Exception
Attachments
Patch (11.82 KB, patch)
2017-01-30 07:06 PST, Yusuke Suzuki
no flags
Patch (11.83 KB, patch)
2017-01-30 07:11 PST, Yusuke Suzuki
no flags
Patch (11.84 KB, patch)
2017-01-30 07:15 PST, Yusuke Suzuki
no flags
Patch (3.05 KB, patch)
2017-01-30 07:31 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2017-01-30 07:06:08 PST
Yusuke Suzuki
Comment 2 2017-01-30 07:11:13 PST
Yusuke Suzuki
Comment 3 2017-01-30 07:15:09 PST
Yusuke Suzuki
Comment 4 2017-01-30 07:31:50 PST
Mark Lam
Comment 5 2017-01-30 10:17:12 PST
Comment on attachment 300106 [details] Patch r=me
Yusuke Suzuki
Comment 6 2017-01-30 22:57:02 PST
Comment on attachment 300106 [details] Patch Thanks!
WebKit Commit Bot
Comment 7 2017-01-30 23:23:07 PST
Comment on attachment 300106 [details] Patch Clearing flags on attachment: 300106 Committed r211410: <http://trac.webkit.org/changeset/211410>
WebKit Commit Bot
Comment 8 2017-01-30 23:23:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.