[JSC] Do not reject WebAssembly.compile() with Exception https://bugs.webkit.org/show_bug.cgi?id=167585

Reviewed by Mark Lam.

JSTests:

* wasm/js-api/Module-compile.js:
(async.testPromiseAPI):

Source/JavaScriptCore:

We accidentally reject the promise with Exception instead of Exception::value()
for the result of WebAssembly::compile().

* wasm/JSWebAssembly.cpp:
(JSC::webAssemblyCompileFunc):


Canonical link: https://commits.webkit.org/184650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211410 268f45cc-cd09-0410-ab3c-d52691b4dbfc